# hello

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  requirements.txt  setup.cfg  setup.sh
.github/workflows/: ci.yml
datamunch/: __init__.py  cli.py  io.py  stats.py
tests/: test_cli.py  test_stats.py
tests/fixtures/: sample.csv
