[project]
name = datamunch
version = 0.1.0
description = CLI tool to compute stats from datasets
readme = README.md
requires-python = >=3.12
authors =
    Your Name <you@example.com>
dependencies =
    pandas
    click

[project.scripts]
datamunch = datamunch.cli:main

[build-system]
requires =
    setuptools>=61
build-backend = setuptools.build_meta
